@@ -21,7 +21,6 @@ module Padrino
       class_option :skip_migration, :aliases => "-s", :default => false, :type => :boolean
       class_option :root, :desc => "The root destination", :aliases => '-r', :default => ".", :type => :string
       class_option :destroy, :aliases => '-d', :default => false, :type => :boolean
-      class_option :name, :desc => "The app name", :aliases => '-a', :default => "Padrino Admin", :type => :string
       class_option :theme, :desc => "Your admin theme: (#{self.themes.join(", ")})", :default => "default", :type => :string
 
       # Copies over the Padrino base admin application
@@ -44,8 +43,9 @@ module Padrino
           ext = fetch_component_choice(:renderer)
 
           empty_directory destination_root("admin")
-          directory "templates/app",     destination_root("admin")
-          directory "templates/assets",  destination_root("public", "admin")
+          directory "templates/app",       destination_root("admin")
+          directory "templates/assets",    destination_root("public", "admin")
+          template  "templates/app.rb.tt", destination_root("admin/app.rb")
 
           account_params = [
             "account", "name:string", "surname:string", "email:string", "crypted_password:string", "role:string",
@@ -56,9 +56,6 @@ module Padrino
           account_params << "-d" if options[:destroy]
 
           Padrino::Generators::Model.start(account_params)
-          # Can't add this through model generator as it does not have /admin loaded yet
-          # so run it and remove it and copy admin version over to admin path.
-          remove_file destination_root('app','models','account.rb')
           column = Struct.new(:name, :type)
           columns = [:id, :name, :surname, :email].map { |col| column.new(col) }
           column_fields = [
@@ -74,12 +71,12 @@ module Padrino
           admin_app.default_orm = Padrino::Admin::Generators::Orm.new(:account, orm, columns, column_fields)
           admin_app.invoke_all
 
-          template "templates/account/#{orm}.rb.tt",                     destination_root("admin", "models", "account.rb"), :force => true
+          template "templates/account/#{orm}.rb.tt", destination_root("app", "models", "account.rb"), :force => true
 
           if File.exist?(destination_root("db/seeds.rb"))
             append_file(destination_root("db/seeds.rb")) { "\n\n" + File.read(self.class.source_root+"/templates/account/seeds.rb.tt") }
           else
-            template "templates/account/seeds.rb.tt",                    destination_root("db/seeds.rb")
+            template "templates/account/seeds.rb.tt", destination_root("db/seeds.rb")
           end
 
           empty_directory destination_root("admin/controllers")
