@@ -11,11 +11,11 @@ class Admin < Padrino::Application
   # set :reload, false          # Reload application files (default in development)
   # set :default_builder, "foo" # Set a custom form builder (default 'StandardFormBuilder')
   # set :locale_path, "bar"     # Set path for I18n translations (default your_app/locales)
-  # enable  :sessions           # Disabled by default
+  # disable :sessions           # Enabled by default
   # disable :flash              # Disables rack-flash (enabled by default if sessions)
   # layout  :my_layout          # Layout can be in views/layouts/foo.ext or views/foo.ext (default :application)
   #
-
+  set :session_secret, "<%= '%x' % rand(2**255) %>"
   set :login_page, "/admin/sessions/new"
   disable :store_location
 
