@@ -10,11 +10,12 @@ class <%= @app_name %> < Padrino::Application
   # set :reload, false          # Reload application files (default in development)
   # set :default_builder, "foo" # Set a custom form builder (default 'StandardFormBuilder')
   # set :locale_path, "bar"     # Set path for I18n translations (defaults to app/locale/)
-  # enable  :sessions           # Disabled by default
+  # enable :sessions            # Disabled by default
   # disable :flash              # Disables rack-flash (enabled by default if sessions)
   # disable :padrino_logging    # Disables Padrino logging (enabled by default)
   # layout  :my_layout          # Layout can be in views/layouts/foo.ext or views/foo.ext (default :application)
   #
+  set :session_secret, "<%= '%x' % rand(2**255) %>"
 
   ##
   # You can configure for a specified environment like:
